use vscode's Makefile instead of Makefile2 which was buggy

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "autoconf",
     "displayName": "autoconf",
-    "description": "Syntax support for the Autoconf M4 and Automake files",
-    "version": "0.0.3",
+    "description": "Syntax support for the Autoconf M4 and Automake files (Autotools)",
+    "version": "0.0.4",
     "icon": "icon.png",
     "publisher": "maelvalais",
     "repository": "https://github.com/maelvalais/vscode_autotools",
@@ -39,15 +39,6 @@
                     "Makefile.in"
                 ],
                 "configuration": "./language-configuration.json"
-            },
-            {
-                "id": "makefile2",
-                "aliases": [
-                    "Makefile2",
-                    "makefile2"
-                ],
-                "extensions": [],
-                "configuration": "./language-configuration.json"
             }
         ],
         "grammars": [
@@ -60,11 +51,6 @@
                 "language": "automake",
                 "scopeName": "source.automake",
                 "path": "./Automake.tmLanguage"
-            },
-            {
-                "language": "makefile2",
-                "scopeName": "source.makefile2",
-                "path": "./Makefile2.tmLanguage"
             }
         ]
     },
