fix warning talking about HTTPS and icon
It said: ``An icon requires a repository with HTTPS protocol to be
specified in this package.json.''

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "autoconf",
     "description": "Syntax support for the Autoconf M4 and Automake files (Autotools)",
     "version": "0.0.4",
-    "icon": "icon.png",
+    "icon": "https://github.com/maelvalais/vscode_autotools/blob/master/icon.png",
     "publisher": "maelvalais",
     "repository": "https://github.com/maelvalais/vscode_autotools",
     "license": "MIT",
