--- a/package.json
+++ b/package.json
@@ -40,6 +40,15 @@
                     "Makefile.in"
                 ],
                 "configuration": "./language-configuration.json"
+            },
+            {
+                "id": "makefile2",
+                "aliases": [
+                    "Makefile2",
+                    "makefile2"
+                ],
+                "extensions": [],
+                "configuration": "./language-configuration.json"
             }
         ],
         "grammars": [
@@ -52,12 +61,18 @@
                 "language": "automake",
                 "scopeName": "source.automake",
                 "path": "./Automake.tmLanguage"
+            },
+            {
+                "language": "makefile2",
+                "scopeName": "source.makefile2",
+                "path": "./Makefile2.tmLanguage"
             }
         ]
     },
     "devDependencies": {
         "plist": "latest",
-        "glob-watcher": "^4.0.0"
+        "glob-watcher": "^4.0.0",
+        "js-yaml": "latest"
     },
     "scripts": {
         "start": "node build.js -w",
