--- a/Makefile2.tmLanguage
+++ b/Makefile2.tmLanguage
@@ -3,7 +3,7 @@
 <plist version="1.0">
   <dict>
     <key>$schema</key>
-    <string>https://cdn.rawgit.com/martinring/tmlanguage/master/tmlanguage.json</string>
+    <string>~/prog/schema-tmlanguage.json</string>
     <key>scopeName</key>
     <string>source.makefile2</string>
     <key>fileTypes</key>
@@ -114,6 +114,33 @@
         <key>patterns</key>
         <array/>
       </dict>
+      <key>simple-variable</key>
+      <dict>
+        <key>name</key>
+        <string>variable.other.shell.makefile</string>
+        <key>match</key>
+        <string>\$\$?\w+</string>
+        <key>patterns</key>
+        <array/>
+      </dict>
+      <key>variables</key>
+      <dict>
+        <key>patterns</key>
+        <array>
+          <dict>
+            <key>include</key>
+            <string>#shell-variable-variable</string>
+          </dict>
+          <dict>
+            <key>include</key>
+            <string>#variable-reference</string>
+          </dict>
+          <dict>
+            <key>include</key>
+            <string>#simple-variable</string>
+          </dict>
+        </array>
+      </dict>
       <key>double-quoted-string</key>
       <dict>
         <key>name</key>
@@ -164,10 +191,10 @@
           </dict>
         </array>
       </dict>
-    </dict>
-    <key>patterns</key>
-    <array>
+      <key>comment</key>
       <dict>
+        <key>name</key>
+        <string>comment.line.number-sign.makefile</string>
         <key>begin</key>
         <string>#</string>
         <key>beginCaptures</key>
@@ -180,8 +207,6 @@
         </dict>
         <key>end</key>
         <string>$\n?</string>
-        <key>name</key>
-        <string>comment.line.number-sign.makefile</string>
         <key>patterns</key>
         <array>
           <dict>
@@ -192,6 +217,7 @@
           </dict>
         </array>
       </dict>
+      <key>assignment</key>
       <dict>
         <key>name</key>
         <string>meta.assignment.makefile</string>
@@ -220,11 +246,7 @@
           </dict>
           <dict>
             <key>include</key>
-            <string>#variable-reference</string>
-          </dict>
-          <dict>
-            <key>include</key>
-            <string>#shell-variable-reference</string>
+            <string>#variables</string>
           </dict>
           <dict>
             <key>include</key>
@@ -244,6 +266,7 @@
           </dict>
         </array>
       </dict>
+      <key>rule</key>
       <dict>
         <key>name</key>
         <string>meta.rule.makefile</string>
@@ -296,6 +319,154 @@
           </dict>
         </array>
       </dict>
+      <key>rule2</key>
+      <dict>
+        <key>name</key>
+        <string>meta.scope.target.makefile</string>
+        <key>begin</key>
+        <string>^(?!\t)([^:]*)(:)(?!\=)</string>
+        <key>beginCaptures</key>
+        <dict>
+          <key>1</key>
+          <dict>
+            <key>patterns</key>
+            <array>
+              <dict>
+                <key>captures</key>
+                <dict>
+                  <key>1</key>
+                  <dict>
+                    <key>name</key>
+                    <string>support.function.target.$1.makefile</string>
+                  </dict>
+                </dict>
+                <key>match</key>
+                <string>^\s*(\.(PHONY|SUFFIXES|DEFAULT|PRECIOUS|INTERMEDIATE|SECONDARY|SECONDEXPANSION|DELETE_ON_ERROR|IGNORE|LOW_RESOLUTION_TIME|SILENT|EXPORT_ALL_VARIABLES|NOTPARALLEL|ONESHELL|POSIX))\s*$</string>
+              </dict>
+              <dict>
+                <key>begin</key>
+                <string>(?=\S)</string>
+                <key>end</key>
+                <string>(?=\s|$)</string>
+                <key>name</key>
+                <string>entity.name.function.target.makefile</string>
+                <key>patterns</key>
+                <array>
+                  <dict>
+                    <key>include</key>
+                    <string>#variables</string>
+                  </dict>
+                  <dict>
+                    <key>match</key>
+                    <string>%</string>
+                    <key>name</key>
+                    <string>constant.other.placeholder.makefile</string>
+                  </dict>
+                </array>
+              </dict>
+            </array>
+          </dict>
+          <key>2</key>
+          <dict>
+            <key>name</key>
+            <string>punctuation.separator.key-value.makefile</string>
+          </dict>
+        </dict>
+        <key>end</key>
+        <string>[^\\]$</string>
+        <key>patterns</key>
+        <array>
+          <dict>
+            <key>begin</key>
+            <string>\G</string>
+            <key>end</key>
+            <string>(?=[^\\])$</string>
+            <key>name</key>
+            <string>meta.scope.prerequisites.makefile</string>
+            <key>patterns</key>
+            <array>
+              <dict>
+                <key>match</key>
+                <string>\\\n</string>
+                <key>name</key>
+                <string>constant.character.escape.continuation.makefile</string>
+              </dict>
+              <dict>
+                <key>match</key>
+                <string>%|\*</string>
+                <key>name</key>
+                <string>constant.other.placeholder.makefile</string>
+              </dict>
+              <dict>
+                <key>include</key>
+                <string>#comment</string>
+              </dict>
+              <dict>
+                <key>include</key>
+                <string>#variables</string>
+              </dict>
+            </array>
+          </dict>
+        </array>
+      </dict>
+      <key>recipe</key>
+      <dict>
+        <key>name</key>
+        <string>meta.scope.recipe.makefile</string>
+        <key>begin</key>
+        <string>^\t</string>
+        <key>end</key>
+        <string>^[^\t]</string>
+        <key>patterns</key>
+        <array>
+          <dict>
+            <key>captures</key>
+            <dict>
+              <key>0</key>
+              <dict>
+                <key>patterns</key>
+                <array>
+                  <dict>
+                    <key>match</key>
+                    <string>\\\n</string>
+                    <key>name</key>
+                    <string>constant.character.escape.continuation.makefile</string>
+                  </dict>
+                  <dict>
+                    <key>include</key>
+                    <string>#variables</string>
+                  </dict>
+                  <dict>
+                    <key>include</key>
+                    <string>source.shell</string>
+                  </dict>
+                </array>
+              </dict>
+            </dict>
+            <key>match</key>
+            <string>.+\n?</string>
+          </dict>
+        </array>
+      </dict>
+    </dict>
+    <key>patterns</key>
+    <array>
+      <dict>
+        <key>include</key>
+        <string>#comment</string>
+      </dict>
+      <dict>
+        <key>include</key>
+        <string>#assignment</string>
+      </dict>
+      <dict>
+        <key>include</key>
+        <string>#rule2</string>
+      </dict>
+      <dict>
+        <key>include</key>
+        <string>#recipe</string>
+      </dict>
       <dict>
         <key>match</key>
         <string>^(\-??include|if|ifeq|ifneq|ifdef|ifndef|else|endif|vpath|export|unexport|define|endef|override)\b</string>
@@ -304,7 +475,7 @@
       </dict>
       <dict>
         <key>include</key>
-        <string>#variable-reference</string>
+        <string>#variables</string>
       </dict>
     </array>
     <key>uuid</key>
