--- a/Makefile2.JSON-tmLanguage
+++ b/Makefile2.JSON-tmLanguage
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://cdn.rawgit.com/martinring/tmlanguage/master/tmlanguage.json",
+	"$schema": "~/prog/schema-tmlanguage.json",
 	"scopeName": "source.makefile2",
 	"fileTypes": [
 		"GNUmakefile",
@@ -69,6 +69,24 @@
 			"contentName": "variable.other.shell.makefile",
 			"patterns": []
 		},
+		"simple-variable": {
+			"name": "variable.other.shell.makefile",
+			"match": "\\$\\$?\\w+",
+			"patterns": []
+		},
+		"variables": {
+			"patterns": [
+				{
+					"include": "#shell-variable-variable"
+				},
+				{
+					"include": "#variable-reference"
+				},
+				{
+					"include": "#simple-variable"
+				}
+			]
+		},
 		"double-quoted-string": {
 			"name": "string.quoted.double.makefile",
 			"begin": "\\\"",
@@ -100,10 +118,9 @@
 					"include": "#variable-reference"
 				}
 			]
-		}
-	},
-	"patterns": [
-		{
+		},
+		"comment": {
+			"name": "comment.line.number-sign.makefile",
 			"begin": "#",
 			"beginCaptures": {
 				"0": {
@@ -111,7 +128,6 @@
 				}
 			},
 			"end": "$\\n?",
-			"name": "comment.line.number-sign.makefile",
 			"patterns": [
 				{
 					"match": "(?<!\\\\)\\\\$\\n",
@@ -119,7 +135,7 @@
 				}
 			]
 		},
-		{
+		"assignment": {
 			"name": "meta.assignment.makefile",
 			"begin": "^([a-zA-Z_][a-zA-Z0-9_]*)\\s*([\\+\\?:]?=)",
 			"beginCaptures": {
@@ -136,10 +152,7 @@
 					"include": "#automatic-variable"
 				},
 				{
-					"include": "#variable-reference"
-				},
-				{
-					"include": "#shell-variable-reference"
+					"include": "#variables"
 				},
 				{
 					"include": "#escaped-char"
@@ -155,7 +168,7 @@
 				}
 			]
 		},
-		{
+		"rule": {
 			"name": "meta.rule.makefile",
 			"begin": "^([^\\t\\:][^\\:]*)\\:",
 			"end": "^(?!\\t)",
@@ -190,12 +203,111 @@
 				}
 			]
 		},
+		"rule2": {
+			"name": "meta.scope.target.makefile",
+			"begin": "^(?!\\t)([^:]*)(:)(?!\\=)",
+			"beginCaptures": {
+				"1": {
+					"patterns": [
+						{
+							"captures": {
+								"1": {
+									"name": "support.function.target.$1.makefile"
+								}
+							},
+							"match": "^\\s*(\\.(PHONY|SUFFIXES|DEFAULT|PRECIOUS|INTERMEDIATE|SECONDARY|SECONDEXPANSION|DELETE_ON_ERROR|IGNORE|LOW_RESOLUTION_TIME|SILENT|EXPORT_ALL_VARIABLES|NOTPARALLEL|ONESHELL|POSIX))\\s*$"
+						},
+						{
+							"begin": "(?=\\S)",
+							"end": "(?=\\s|$)",
+							"name": "entity.name.function.target.makefile",
+							"patterns": [
+								{
+									"include": "#variables"
+								},
+								{
+									"match": "%",
+									"name": "constant.other.placeholder.makefile"
+								}
+							]
+						}
+					]
+				},
+				"2": {
+					"name": "punctuation.separator.key-value.makefile"
+				}
+			},
+			"end": "[^\\\\]$",
+			"patterns": [
+				{
+					"begin": "\\G",
+					"end": "(?=[^\\\\])$",
+					"name": "meta.scope.prerequisites.makefile",
+					"patterns": [
+						{
+							"match": "\\\\\\n",
+							"name": "constant.character.escape.continuation.makefile"
+						},
+						{
+							"match": "%|\\*",
+							"name": "constant.other.placeholder.makefile"
+						},
+						{
+							"include": "#comment"
+						},
+						{
+							"include": "#variables"
+						}
+					]
+				}
+			]
+		},
+		"recipe": {
+			"name": "meta.scope.recipe.makefile",
+			"begin": "^\\t",
+			"end": "^[^\\t]",
+			"patterns": [
+				{
+					"captures": {
+						"0": {
+							"patterns": [
+								{
+									"match": "\\\\\\n",
+									"name": "constant.character.escape.continuation.makefile"
+								},
+								{
+									"include": "#variables"
+								},
+								{
+									"include": "source.shell"
+								}
+							]
+						}
+					},
+					"match": ".+\\n?"
+				}
+			]
+		}
+	},
+	"patterns": [
+		{
+			"include": "#comment"
+		},
+		{
+			"include": "#assignment"
+		},
+		{
+			"include": "#rule2"
+		},
+		{
+			"include": "#recipe"
+		},
 		{
 			"match": "^(\\-??include|if|ifeq|ifneq|ifdef|ifndef|else|endif|vpath|export|unexport|define|endef|override)\\b",
 			"name": "keyword.control.makefile"
 		},
 		{
-			"include": "#variable-reference"
+			"include": "#variables"
 		}
 	],
 	"uuid": "FF1825E8-6B1C-11D9-B883-000D93589AF6"
