fix comment not highlighted when interleaved with a recipe
For example:

    all:
        gcc a.c
    # comment that should be highlighted
        ld

--- a/Makefile2.JSON-tmLanguage
+++ b/Makefile2.JSON-tmLanguage
@@ -265,7 +265,7 @@
 		"recipe": {
 			"name": "meta.scope.recipe.makefile",
 			"begin": "^\\t",
-			"end": "^[^\\t]",
+			"end": "^(?=[^\\t])",
 			"patterns": [
 				{
 					"captures": {
